--- a/indice/static/css/base.css
+++ b/indice/static/css/base.css
@@ -4,81 +4,35 @@ body
 	margin-left: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
-	background-color : #fff;
+	background-color : #5858FA;
 	font-family: Arial, Helvetica, sans-serif;
 }
-
-/* la parte de cabecera--Banner */
-#cabecera
-{
-	width : 100%;
-	height: 75px;
-	background-color: #DD4814;
-}
-#banner
-{
-	width: 1000px;
-	height: 75px;
-	margin-left: auto;
-	margin-right: auto;
-}
-#banner_imagen
+/*-----------------------------*/
+#izquierda
 {
 	position:relative;
 	float: left;
-	height: 75px;
-	width: 75px;
+	width: 25%;
+	height: 100%;
+	background-color: #5858FA;
 }
-#banner_titulo
+#derecha
 {
-	position:relative;
-	float: left;
-	height: 55px;
-	width: 850px;
-	text-align: center;
-	color: #fff;
-	font-weight: bold;
-	font-size: 60px;
-	text-shadow: 2px 2px #a9a9a9;
-}	
-
+	position: relative;
+	float:left;
+	width: 75%;
+	height: 100%;
+	background-color: #fff;
+}		
 /*--------   contenido  -------*/
 #contenedor
 {
-	width: 1000px;
+	position: relative;
+	width: 650px;
+	margin-top: 5%;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 25px;
-}
-/*--- footer ---*/
-#tirafooter
-{
-	width : 100%;
-	height: 250px;
-	background-color: #EFEFEF;
-	border-top : 1px solid #E0E0E0;
-	margin-top: 25px;	
-	margin-bottom: 0px;
-}	
-#footer
-{
-	width: 1000px;
-	height: 250px;
-	margin-left: auto;
-	margin-right: auto;
-}
-#footer_social
-{
-	position: relative;
-	float: left;
-	width: 260px;
-	height: 220px;
-	margin-top: 15px;
-	border-right: 1px solid #E0E0E0;
-}	
-#footer_social img
-{
-	margin-right: 10px;
 }
 
 
