--- a/indice/static/principal/css/index.css
+++ b/indice/static/principal/css/index.css
@@ -33,4 +33,29 @@ h1
 	margin-top: 0px;
 	margin-bottom: 0px;
 }		
+
+#titulos
+{
+	position:relative;
+	width: 80%;
+	margin-top: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+.titulo_grande
+{
+	color: #fff;
+	font-size: 60px;
+	margin-bottom: 0px;
+	margin-top: 0px;
+}	
+.titulo_pequeno
+{
+	color: #fff;
+	font-size: 25px;
+	margin-bottom: 0px;
+	margin-top: 0px;
+}	
 		
