--- a/indice/templates/base.html
+++ b/indice/templates/base.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div id="izquierda">
+	{% block esquerda %} {% endblock %}
 </div>
 <div id="derecha">
 <!--  cuerpo -- contenido -->
